get rid of translucent separate shader